# pancast-code

./: .gitignore  .gitmodules  README.md  pancast.code-workspace  pancast.zsh  start-gdb-server
beacon/: .cproject  .project  CMakeLists.txt  README.md  app.c  app.h  app_iostream_eusart.c  main.c  pancast-beacon.hex  pancast-beacon.slcp  pancast-beacon.slps  prj.conf
beacon/.pdm/: uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.10.2.1.20201103.gcc.slsproj  uc.module.setup.componentSetup.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.10.2.1.20201103.gcc.slsproj  uc.module.setup.componentSetup.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.9.2.1.20191025.gcc.slsproj  uc.module.setup.defaultSettings.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.9.2.1.20191025.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.10.2.1.20201103.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.10.2.1.20201103.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.9.2.1.20191025.gcc.slsproj  (+3 more)
beacon/autogen/: .crc_config.crc  sl_bluetooth.c  sl_component_catalog.h  (+1 more)
zephyr-beacon/: CMakeLists.txt  README.md  prj.conf
(+561 files in other folders)
